<resources>
    <string name="app_name">ASpeedometerApp</string>
    <string name="welcome_text">Welcome to SpeedometerApp !</string>
    <string name="new_username">username</string>
    <string name="register_btn">Register</string>
    <string name="login_link">I have account log me in!</string>
    <string name="new_password">password</string>
    <string name="login_text">Login to SpeedometerApp!</string>
    <string name="submit_button">Submit</string>
    <string name="username_text">username</string>
    <string name="password_text">password</string>
    <string name="title_activity_location_map">Map</string>
</resources>
